Fri Oct 22 07:50:54 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * TAO_IDL/be/be_visitor_component/executor_exh.cpp:
        * TAO_IDL/be/be_visitor_component/executor_exs.cpp:
        * TAO_IDL/be/be_visitor_component/facet_exh.cpp:
        * TAO_IDL/be_include/be_visitor_component/executor_exh.h:
        * TAO_IDL/be_include/be_visitor_component/facet_exh.h:
          Removed some more trailing whitespaces from the
          generated code.
          Added comment.

Fri Oct 22 07:03:47 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * TAO_IDL/be/be_visitor_attr_assign.cpp:
        * TAO_IDL/be/be_visitor_attr_return.cpp:
        * TAO_IDL/be/be_visitor_operation/arglist.cpp:
        * TAO_IDL/be/be_visitor_operation/operation_ch.cpp:
          Declaration of the getter and setter methods for
          component attributes on one line in the generated
          executor header file.
          Return value and setting the attribute value on one
          line in the generated executor source file.

Fri Oct 22 06:39:15 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * TAO_IDL/be/be_visitor_component/executor_exh.cpp:
        * TAO_IDL/be/be_visitor_operation/operation_ch.cpp:
          Removed some more trailing whitespaces from the
          generated code.

Fri Oct 22 06:28:07 UTC 2010  Marcel Smit  <msmit@remedy.nl>

        * TAO_IDL/be/be_visitor_attr_assign.cpp:
        * TAO_IDL/be/be_visitor_field/cdr_op_cs.cpp:
        * TAO_IDL/be/be_visitor_valuetype/marshal_cs.cpp:
          Fuzz. Trailing whitespaces.

        * TAO_IDL/be/be_visitor_operation/arglist.cpp:
          Fuzz. Newline at end of file.

Thu Oct 21 17:39:18 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_valuetype.cpp:
        * TAO_IDL/be/be_visitor_valuetype/marshal_cs.cpp:

          Fixed more code generation bugs related to be_attribute
          newly inheriting from be_field.

Thu Oct 21 17:19:12 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>
